--- a/TP2-projet-blog/TP2-exercices/gestionCommentaires.css
+++ b/TP2-projet-blog/TP2-exercices/gestionCommentaires.css
@@ -2,6 +2,21 @@ body{
     background-color: rgb(255, 249, 67);
 }
 
+.lien-connexion{
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    font-size: 1.5rem;
+    color: rgb(0, 0, 0);
+    padding: 10px 20px;
+    background-color: white;
+    border-bottom: 1px solid black;
+    border-left: 1px solid black;
+    border-radius: 0 0 0 20px;
+    margin: 0 !important;
+    box-shadow: 2px 2px 0px black;
+}
+
 main{
     margin: 20px 20px 80px 20px;
     display: flex;
@@ -159,7 +174,6 @@ button img{
 .comment-form {
     display: flex;
     flex-direction: column;
-    background-color: #f8f8f8;
     margin-bottom: 50px;
 }
 
