--- a/TP2-projet-blog/TP2-exercices/gestionCommentaires.css
+++ b/TP2-projet-blog/TP2-exercices/gestionCommentaires.css
@@ -18,7 +18,7 @@ body{
 }
 
 main{
-    margin: 20px 20px 80px 20px;
+    margin: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -82,7 +82,7 @@ button img{
 
 /* Conteneur Article */
 
-.conteneur-article{
+.conteneur-article, .supp-com-cont{
     display: flex;
     flex-direction: column;
     margin: 20px 0;
@@ -132,6 +132,7 @@ button img{
 .com *{
     margin: 0;
     padding: 0;
+    overflow-wrap: break-word;
 }
 
 .com{
@@ -228,4 +229,61 @@ button img{
 .comment-form input[type="submit"]:hover {
     background-color: rgb(255, 250, 91);
     box-shadow: 4px 4px 0px black;
+}
+
+/* Formulaire supprimer commentaire */
+
+.supp-com-contcont{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+
+.supp-com-cont{
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+    align-items: center;
+}
+
+.supp-com-form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.supp-com-form input[type="number"]{
+    margin: 5px;
+    padding: 5px 10px;
+    border-radius: 10px;
+    width: 50px;
+    border: 1px solid #000000;
+    box-shadow: 3px 3px 0px black;
+    font-size: 1.1rem;
+    height: 30px;
+}
+
+.supp-com-form input[type="number"]:focus{
+    outline: none;
+    box-shadow: 4px 4px 0px black;
+}
+
+.supp-com-form input[type="submit"]{
+    height: 45px;
+    margin: 5px;
+    padding: 5px 10px;
+    background-color: rgb(255, 249, 60);
+    border-radius: 10px;
+    color: #000000;
+    box-shadow: 3px 3px 0px black;
+    border: 1px solid #000000;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.supp-com-form input[type="submit"]:hover{
+    box-shadow: 4px 4px 0px black;
+    background-color: rgb(255, 250, 91);
 }
