--- a/TP2-projet-blog/TP2-exercices/gestionAjout.css
+++ b/TP2-projet-blog/TP2-exercices/gestionAjout.css
@@ -1,7 +1,9 @@
 body{
   background-color: rgb(255, 249, 67);
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   padding: 10px;
 }
 
