--- a/TP4-projet-mvc/TP4-exercices/public/css/ajoutMembre.css
+++ b/TP4-projet-mvc/TP4-exercices/public/css/ajoutMembre.css
@@ -23,3 +23,9 @@ input[type="submit"] {
 input[type="submit"]:hover {
   background-color: #0056b3;
 }
+input[type="date"] {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  font-size: 16px;
+}
