--- a/TP4-projet-mvc/TP4-exercices/public/css/header.css
+++ b/TP4-projet-mvc/TP4-exercices/public/css/header.css
@@ -5,6 +5,7 @@
 }
 
 header {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -41,4 +42,10 @@ nav ul li a:hover {
 
 main{
   min-height: calc(100vh - 188px);
+}
+
+.logoUniv{
+  position: absolute;
+  left: 20px;
+  height: 50px;
 }
