--- a/TP4-projet-mvc/TP4-exercices/public/css/membre.css
+++ b/TP4-projet-mvc/TP4-exercices/public/css/membre.css
@@ -101,7 +101,7 @@ main > p {
 .rando{
   position: relative;
 }
-.btn{
+.btnSupp{
   position: absolute;
   display: flex;
   justify-content: center;
